--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <pre>This is My New Project
     I Don,t Khow What to Write
-          Let,s Start Coding<\pre>
+          Let,s Start Coding</pre>
   
   
 </body>
