--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 # princeabir061.github.io
 <html>
 <head>
-<rel="stylesheet" class="text/css" href="style.css">
 
-
-
+<Title>
+PrincePerosnalWeb
+</Title>
 </head>
 <body>
 
   
   <pre>This is My New Project
     I Don,t Khow What to Write
-          Let,s Start Coding
+          Let,s Start Coding...
+
+<i color="Green" aling="Centre">Lets Do Something New</i> 
   
   
 </body>
