--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ PrincePerosnalWeb
     I Don,t Khow What to Write
           Let,s Start Coding...
 
-<i color="Green" aling="Centre">Lets Do Something New</i> 
+<i color="Green" aling="Centre"font-size="25px">Lets Do Something New </i> 
   
   
 </body>
