--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@ PrincePerosnalWeb
 <body>
 
   
-  <pre>This is My New Project
-    I Don,t Khow What to Write
-          Let,s Start Coding...
+<ul>
+<b>  
+<li>Personal Information</li>
+<li>Educational Qualification</li>
+<li>Hobbie</li>
+<li>Achievement</li>
+<li>Future Plan</li>
 
-<i color="Green" aling="Centre"font-size="25px">Lets Do Something New </i> 
-  
-  
+</b>  
+</ul>
 </body>
 </html>
