--- a/index.html
+++ b/index.html
@@ -1,23 +1,35 @@
 # princeabir061.github.io
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+   <link rel="stylesheet" type="text/css" href="style.css">
 
-<Title>
-PrincePerosnalWeb
-</Title>
 </head>
+
+
 <body>
 
-  
-<ul>
-<b>  
-<li>Personal Information</li>
-<li>Educational Qualification</li>
-<li>Hobbie</li>
-<li>Achievement</li>
-<li>Future Plan</li>
-
-</b>  
+    <div class="main">
+ <ul type="none">
+    <li class="active"><a href="##9373">Home</a> </li>
+    <li><a href="##7923">Personal Information</a> </li>
+    <li><a href="##829">Educational Qualification</a> </li>
+    <li><a href="##98231">Hobbies</a> </li>
+    <li><a href="##837">Achivement</a> </li>
+    <li><a href="##98231">Future Plan</a> </li>
 </ul>
+   </div>
+
+
+   <div class="home">
+     <img src="image3.jpg">
+   <div>
+
+      <p>Prince Ibne Abir</p>
+
 </body>
+
 </html>
