--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="main">
  <ul type="none">
     <li class="active"><a href="##9373">Home</a> </li>
-    <li><a href="##7923">Personal Information</a> </li>
+    <li><a href="personal.html">Personal Information</a> </li>
     <li><a href="##829">Educational Qualification</a> </li>
     <li><a href="##98231">Hobbies</a> </li>
     <li><a href="##837">Achivement</a> </li>
