--- a/personal.html
+++ b/personal.html
@@ -2,12 +2,104 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    This is My personal
-</body>
+
+<style>
+
+*{
+
+   padding:0;
+   margin:0;
+}
+
+body{
+
+   background-size:cover;
+   background-position:center;
+   height: 100vh;
+} 
+
+p{
+
+font-size: 35px;
+font-family:cambria;
+text-align: center;
+margin-top:20px;
+padding-left:30px;
+padding-right: 30px;
+}
+ul{
+
+text-align: center;
+list-style-type: none;
+margin-top:15px;
+padding:23px;
+
+}
+
+ul li{
+
+  display:inline-block;
+  padding: 1px;
+}
+
+ul li a{
+
+  text-decoration: none;
+  color: white;
+  padding: 5px 10px;
+  border: 2px solid rgb(0, 211, 0);
+  transition: 1.2s ease;
+  font-family: lucida;
+
+}
+
+ul li a:hover{
+
+   background-color:rgb(13, 224, 13);
+   color: white;
+
+}
+
+ul li.active a{
+
+  background-color: white;
+  color:black;
+
+}
+
+
+</style>
+ 
+    </head>
+
+<body background="image10.jpg">
+
+
+<div class="main">
+    <ul type="none">
+
+       <li><a href="index.html">HOME</a> </li>
+       <li class="active"><a href="personal.html">PERSONAL INFORMATION</a> </li>
+       <li><a href="education.html">EDUCATIONAL QUALIFICATION</a> </li>
+       <li><a href="hobbie.html">HOBBIES</a> </li>
+       <li><a href="achievment.html">ACHIEVMENT</a> </li>
+       <li><a href="future.html">FUTURE PLAN</a> </li>
+
+    </ul>
+     </div>
+
+ <p>
+
+      <i><b>Hi</b> i am <b>Abir</b>.My Full name is <b>Prince Ibne Abir</b>.I am 20 years Old.I was Born in Cumilla But I have been Staying in Dhaka with my family for study perpose.My mother name,s <b>Kulsuma Begum</b>.She is a homemaker.My father name,s <b>Humayun Kabir</b>.He is a Buisnessman.I have two sisters and one of them is my Elder and Other one is my younger.My Elder Sister name,s <b>Sristy</b>.She is now in the 5th semester of her bachelor pogramme at UITS university.My younger sister name,s <b>Tuluna</b>.She is a student of class 6.
+   </i>
+
+</p>  
+
+
+   </body>
+
 </html>
