--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <div class="main">
  <ul type="none">
-    <li class="active"><a href="##9373">Home</a> </li>
-    <li><a href="personal.html">Personal Information</a> </li>
-    <li><a href="##829">Educational Qualification</a> </li>
-    <li><a href="##98231">Hobbies</a> </li>
-    <li><a href="##837">Achivement</a> </li>
-    <li><a href="##98231">Future Plan</a> </li>
+    <li class="active"><a href="##9373">HOME</a> </li>
+    <li><a href="personal.html">PERSONAL INFORMATION</a> </li>
+    <li><a href="education.html">EDUCATIONAL QUALIFICATION</a> </li>
+    <li><a href="hobbie.html">HOBBIES</a> </li>
+    <li><a href="achievment.html">ACHIEVMENT</a> </li>
+    <li><a href="future.html">FUTURE PLAN</a> </li>
 </ul>
    </div>
 
@@ -32,4 +32,4 @@
 
 </body>
 
-</html>
+</html
