added new files

--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,3 @@
-# princeabir061.github.io
-
 <!DOCTYPE html>
 <html lang="en">
 <head >
@@ -28,9 +26,11 @@ font-size: 35px;
 font-family:cambria;
 text-align: center;
 margin-top:20px;
-padding-left:30px;
-padding-right: 30px;
+margin-left: 40px;
+margin-right: 40px;
+line-height: 45px;
 }
+
 ul{
 
 text-align: center;
@@ -50,7 +50,7 @@ ul li a{
 
   text-decoration: none;
   color: white;
-  padding: 5px 10px;
+  padding: 5px;
   border: 2px solid rgb(0, 211, 0);
   transition: 1.2s ease;
   font-family: lucida;
@@ -66,8 +66,8 @@ ul li a:hover{
 
 ul li.active a{
 
-  background-color: white;
-  color:black;
+  background-color:rgb(13, 224, 13);
+  color:white;
 
 }
 
@@ -85,8 +85,8 @@ ul li.active a{
        <li><a href="index.html">HOME</a> </li>
        <li class="active"><a href="personal.html">PERSONAL INFORMATION</a> </li>
        <li><a href="education.html">EDUCATIONAL QUALIFICATION</a> </li>
-       <li><a href="hobbie.html">HOBBIES</a> </li>
-       <li><a href="achievment.html">ACHIEVMENT</a> </li>
+       <li><a href="hobbie.html">HOBBY</a> </li>
+       <li><a href="achievement.html">ACHIEVEMENT</a> </li>
        <li><a href="future.html">FUTURE PLAN</a> </li>
 
     </ul>
@@ -94,7 +94,7 @@ ul li.active a{
 
  <p>
 
-      <i><b>Hi</b> i am <b>Abir</b>.My Full name is <b>Prince Ibne Abir</b>.I am 20 years Old.I was Born in Cumilla But I have been Staying in Dhaka with my family for study perpose.My mother name,s <b>Kulsuma Begum</b>.She is a homemaker.My father name,s <b>Humayun Kabir</b>.He is a Buisnessman.I have two sisters and one of them is my Elder and Other one is my younger.My Elder Sister name,s <b>Sristy</b>.She is now in the 5th semester of her bachelor pogramme at UITS university.My younger sister name,s <b>Tuluna</b>.She is a student of class 6.
+      <i><b>Hi,</b> i am <b>Abir</b>.My Full name is <b>Prince Ibne Abir</b>.I am 20 years Old.I was Born in Cumilla But I have been Staying in Dhaka with my family for study perpose.My mother name,s <b>Kulsuma Begum</b>.She is a homemaker.My father name,s <b>Humayun Kabir</b>.He is a Buisnessman.I have two sisters and one of them is my Elder and Other one is my younger.My Elder Sister name,s <b>Sristy</b>.She is now in the 5th semester of her bachelor pogramme at UITS university.My younger sister name,s <b>Tuluna</b>.She is a student of class 6.
    </i>
 
 </p>  
