--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-# princeabir061.github.io
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,8 +16,8 @@
     <li class="active"><a href="##9373">HOME</a> </li>
     <li><a href="personal.html">PERSONAL INFORMATION</a> </li>
     <li><a href="education.html">EDUCATIONAL QUALIFICATION</a> </li>
-    <li><a href="hobbie.html">HOBBIES</a> </li>
-    <li><a href="achievment.html">ACHIEVMENT</a> </li>
+    <li><a href="hobbie.html">HOBBY</a> </li>
+    <li><a href="achievement.html">ACHIEVMENT</a> </li>
     <li><a href="future.html">FUTURE PLAN</a> </li>
 </ul>
    </div>
@@ -28,8 +27,8 @@
      <img src="image3.jpg">
    <div>
 
-      <p>Prince Ibne Abir</p>
+      <p><i>Prince Ibne Abir</i></p>
 
 </body>
 
-</html
+</html>
